test-cases/final-dump/duplicate_resource.exp
Error detected during preliminary processing of module duplicate_resource
final-dump/duplicate_resource.wybe:2:1: Duplicate declaration of resource 'foo'
final-dump/duplicate_resource.wybe:3:1: Duplicate declaration of resource 'foo'
