test-cases/final-dump/duplicate_resource.wybe
resource foo:float
resource foo:int
resource foo:int